fix: fix z-index

--- a/src/assets/stylesheets/CardSecondary/RatesList.css
+++ b/src/assets/stylesheets/CardSecondary/RatesList.css
@@ -12,6 +12,7 @@
 /* Список валют */
 .secondary-rates__list {
   position: absolute;
+  z-index: 2;
   top: 20px;
   left: 20px;
   width: 100px;
